# Realtime-Voice-Ai-agent-with-RAG

./: .gitignore  README.md  Useful_links.md
backend/: .env  main.py  pyproject.toml
backend/app/: bot.py  config.py  database.py
backend/app/models/: document.py
backend/app/routers/: equipment.py
backend/app/services/: embeddings.py
frontend/: package-lock.json
