[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "langchain-google-genai>=4.2.1",
    "langchain-text-splitters>=1.1.1",
    "loguru>=0.7.3",
    "motor>=3.7.1",
    "pipecat-ai[deepgram,elevenlabs,groq,local-smart-turn-v3,protobuf,silero-vad]>=0.0.108",
    "pydantic-settings>=2.13.1",
    "pymongo>=4.16.0",
    "pypdf>=6.10.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "uvicorn>=0.44.0",
]
